# ccwc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ccwc-in-cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
docs/: HFT_CODE_REVIEW.md  PROBLEM.md  Streams.md  UniversalInputStream_Architecture_Guide.md
review/: CLANG.md  CMAKE.md
src/: main.cpp
src/algorithm/: counter.hpp  counter_state_machine.cpp  counter_state_machine.hpp  processor.hpp  universal_input_stream.cpp  universal_input_stream.hpp
src/argument_parser/: argument_parser.cpp  argument_parser.hpp  input_objects.hpp
src/exception/: exception.hpp
src/output_formatter/: output_formatter.cpp  output_formatter.hpp
